# springbok-onboarding-demo

./: .gitignore  README.md  package-lock.json  pyproject.toml
data/prompts/: base.md  case.md  onboarding.md  personal.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BurgerIcon.tsx  Button.tsx  Card.tsx  Chat.tsx  ChatMessage.tsx  InputField.tsx  LoadingIndicator.tsx  Sidebar.tsx  Theme.tsx  Topbar.tsx  Typography.tsx
src/: __init__.py  main.py  models.py  response.py
src/vite_component/: __init__.py
