[tool.poetry]
name = "onboarding-demo"
version = "0.1.0"
description = ""
authors = ["Maximilian Croissant <maximilian@springbok.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
pydantic = "^2.5.1"
openai = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
